src/test/run-pass/cfg/auxiliary/crate-attributes-using-cfg_attr.rs
// no-prefer-dynamic
// compile-flags: --cfg foo

#![cfg_attr(foo, crate_type="lib")]

pub fn foo() {}
