src/test/compile-fail/not-utf8.rs
// error-pattern: is not UTF-8

fn foo() {
    #include("not-utf8.bin")
}
